# lcd1602-driver

./: Cargo.toml  README.md
examples/esp32/esp32c3_lcd/: Cargo.toml
examples/stm32/stm32f7_lcd/: Cargo.toml  memory.x
examples/stm32/stm32f7_lcd/.cargo/: Config.toml
examples/stm32/stm32f7_lcd/src/: main.rs
examples/stm32/stm32h7_lcd/: Cargo.toml
examples/stm32/stm32h7_lcd/.cargo/: Config.toml
examples/stm32/stm32h7_lcd/src/: main.rs
src/: display_control.rs  entry_mode.rs  error.rs  lib.rs
src/data_bus/: eightbit_bus.rs  fourbit_bus.rs  fourbit_eightbit_bus.rs  i2c_bus.rs  mod.rs
